# chatdraw

./: .env.example  .gitignore  DockerFile  DockerFile.backup  Dockerfile  DockerfileDev  LICENSE  README.md  TODO.md  a.patch  app.py  chat.vue  chat_old.html  checks.ipynb  db_init.sql  docker-compose-dev.yml  docker-compose.yml  generating_images.ipynb  index.html  langchain.patch  patch  pyproject.toml  requirements.txt
.cursor/rules/: fastapi.md  general.md  markdown.md  ml.md  vue.md
.devcontainer/: devcontainer.json  docker-compose-dev.yml
.devcontainer/draw_service/: devcontainer.json
.github/: instructions.md
.github/instructions/: general.instructions.md  vue.instructions.md
.github/workflows/: draw_service-build.yaml  draw_service-test.yaml  frontend-build.yaml  frontend-test.yaml  push-backend.yaml  push-frontend.yaml
chatdraw/: app.py  chat.py  chat_system.py  pyproject.toml  sketch_agent_guide.py  sketch_input.py  tutorial_creator_sketchagent.py  utils.py
chatdraw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chatdraw/chatdraw/: db.py  utils.py
chatdraw/chatflows/: chat_system.py  drawtutorial.py  greeting.py
chatdraw/ready_tutorials/: apple2_tutorial.json  apple_tutorial.json  (+2 more)
draw_service/: Dockerfile  pyproject.toml
draw_service/chatdraw/: app.py  db.py  db_seed.py
draw_service/chatdraw/chatflows/: chat_system.py  drawtutorial.py  greeting.py
draw_service/chatdraw/drawing_score/: dino_v2_score.py
draw_service/chatdraw/sketches/: README.md  svg_parsing.py  svg_utils.py  tutorial_agent_svg.py  tutorial_agent_svg_chain.py  tutorial_creator_sketchagent.py
draw_service/tests/: test_app.py  test_db.py  test_db_connection.py  test_drawing_score.py  test_greeting.py  test_svg_parsing.py  test_svg_utils.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
k8s/: anthropic-secret.yaml  draw-service-deployment.yaml  postgres-deployment.yaml
scripts/: create_rerun_db.sh  create_rerun_server.sh
tests/: test_app.py  test_db.py  test_db_connection.py  test_drawing_score.py  test_greeting.py  test_svg_utils.py
(+31 files in other folders)
