[project]
name = "chatdraw"
version = "0.1.0"
description = ""
authors = [{ name="Moshe", email="barboym@gmail.com" }]
dependencies = [
    "openai",
    "anthropic",
    "fastapi[standard]",
    "Pillow",
    "uvicorn",
    "pydantic",
    "scipy",
    "xmltodict",
    "psycopg2-binary",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chatdraw"]
