[project]
name = "chatdraw"
version = "0.1.0"
description = ""
authors = [{ name="Moshe", email="barboym@gmail.com" }]
dependencies = [
    "fastapi[standard]",
    "Pillow",
    "uvicorn",
    "scipy",
    "psycopg2-binary",
    "python-dotenv",
    "pytest",
    "llama-index-llms-anthropic",
    "llama-index",
    "transformers[torch]",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chatdraw"]
